tests/ui/deref/pin-deref-const.stderr
error[E0596]: cannot borrow data in dereference of `Pin<&MyUnpinType>` as mutable
  --> $DIR/pin-deref-const.rs:34:5
   |
LL |     r_unpin.at_mut_self();
   |     ^^^^^^^ cannot borrow as mutable
   |
   = help: trait `DerefMut` is required to modify through a dereference, but it is not implemented for `Pin<&MyUnpinType>`

error[E0596]: cannot borrow data in dereference of `Pin<&mut MyPinType>` as mutable
  --> $DIR/pin-deref-const.rs:39:5
   |
LL |     r_pin.at_mut_self();
   |     ^^^^^ cannot borrow as mutable
   |
   = help: trait `DerefMut` is required to modify through a dereference, but it is not implemented for `Pin<&mut MyPinType>`

error[E0596]: cannot borrow data in dereference of `Pin<&MyPinType>` as mutable
  --> $DIR/pin-deref-const.rs:44:5
   |
LL |     r_pin.at_mut_self();
   |     ^^^^^ cannot borrow as mutable
   |
   = help: trait `DerefMut` is required to modify through a dereference, but it is not implemented for `Pin<&MyPinType>`

error[E0596]: cannot borrow data in dereference of `Pin<&MyUnpinType>` as mutable
  --> $DIR/pin-deref-const.rs:52:5
   |
LL |     r_unpin
   |     ^^^^^^^ cannot borrow as mutable
   |
   = help: trait `DerefMut` is required to modify through a dereference, but it is not implemented for `Pin<&MyUnpinType>`

error[E0596]: cannot borrow data in dereference of `Pin<&MyPinType>` as mutable
  --> $DIR/pin-deref-const.rs:68:5
   |
LL |     r_pin
   |     ^^^^^ cannot borrow as mutable
   |
   = help: trait `DerefMut` is required to modify through a dereference, but it is not implemented for `Pin<&MyPinType>`

error[E0596]: cannot borrow data in dereference of `Pin<&mut MyPinType>` as mutable
  --> $DIR/pin-deref-const.rs:76:5
   |
LL |     r_pin
   |     ^^^^^ cannot borrow as mutable
   |
   = help: trait `DerefMut` is required to modify through a dereference, but it is not implemented for `Pin<&mut MyPinType>`

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0596`.
